--- a/2parametric_regresion-javieradanaque.Rmd
+++ b/2parametric_regresion-javieradanaque.Rmd
@@ -36,7 +36,8 @@ Para el análisis se está usando la data `bostonvivienda.txt`, ubicada entre lo
 distribuidos para la clase.
 
 ```{r data, warning=FALSE}
-valor_viviendas <- read.table("data/bostonvivienda.txt", header = TRUE, stringsAsFactors = FALSE)
+valor_viviendas <- read.table("data/bostonvivienda.txt",
+                              header = TRUE, stringsAsFactors = FALSE)
 valor_viviendas[1:6, c(1:3, 6, 7, 10, 13, 14)]
 ```
 
@@ -116,6 +117,8 @@ summary(lm_viviendas)
 Una de las primeras cosas que podemos observar es nuestro coeficiente de determinación ajustado, $R^{2}_{ajustado}$, que no está mal considerando que sólo hemos seleccionado una variable entre todas las que podrían explicar los precios de las viviendas. Este número nos está diciendo que alrededor del 48% de la variabilidad en los precios de las viviendas está explicada por el número de habitaciones.
 
 Otro valor muy importante es el `p-value` de nuestro modelo, $<2.2e^{-16}$, lo cual nos dice que nuestro modelo es significativo (rechazamos la Hipotesis Nula). Esto lo podemos validar en la Tabla de Anova con más detalle:
+
+\newpage
 
 ```{r anova_simple}
 anova(lm_viviendas)
