R: R: Non-parametric Methods - Running Medians

--- a/3noparametricos-javieradanaque.Rmd
+++ b/3noparametricos-javieradanaque.Rmd
@@ -106,7 +106,7 @@ for (j in 2:(n2-1)) {
 
 ## Running Means
 
-```{r running_means, fig.cap='Running Means with k = 30. La línea es más "suave." Ojo: la línea no se encuentra definida en los extremos.'}
+```{r running_means, fig.cap='Running Means with k = 30. La línea es más "suave". Ojo: la línea no se encuentra definida en los extremos.'}
 valor_viviendas <- valor_viviendas[order(valor_viviendas$rm), ]
 k=30
 n=dim(valor_viviendas)
@@ -115,6 +115,24 @@ s=rep(0,n[1]-2*k)
 for (i in (k+1):(n[1]-k)) {
   j=seq(i-k, i+k)
   s[i]=mean(valor_viviendas[j,"medv"])
+}
+
+i = seq(k+1,n[1]-k)
+plot(valor_viviendas[, 6], valor_viviendas[, 14], col='tomato', pch=19,
+     xlab = "rm", ylab = "medv")
+lines(valor_viviendas[i,6],s[i],type = "s", col = "blue")
+```
+
+## Running Medians
+
+```{r running_medians, fig.cap='Running Medians with k = 30. La línea es más "suave" aún; esto se debe a la menor influencia de los datos atípicos sobre nuestro estimado.'}
+k=30
+n=dim(valor_viviendas)
+s=rep(0,n[1]-2*k)
+
+for (i in (k+1):(n[1]-k)) {
+  j=seq(i-k, i+k)
+  s[i]=median(valor_viviendas[j,"medv"])
 }
 
 i = seq(k+1,n[1]-k)
